<resources>
    <string name="login">login</string>
    <string name="app_name_basic">Pinetree Healthcare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pull_to_refresh">The drop-down can refresh</string>
    <string name="release_to_refresh">Immediate refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="not_updated_yet">Not updated yet</string>
    <string name="updated_at">Updated at%1$s ago</string>
    <string name="updated_just_now">Updated just now</string>
    <string name="time_error">time error</string>
    <string name="accountManage">account management</string>
    <string name="other_account_login">Other account login</string>
    <string name="guarantee_Time">Guarantee Time</string>
    <string name="date1">Date</string>
    <string name="time1">Time</string>
    <string name="guarantee_Amount">Guarantee Amount</string>
    <string name="yuan">Yuan</string>
    <string name="ability_level_preliminary_assessment">Ability level preliminary assessment </string>
    <string name="well_functioning">Well Functioning </string>
    <string name="mild_disability">Mild Disability </string>
    <string name="moderate_disability">Moderate Disability </string>
    <string name="severe_disability">Severe Disability </string>
    <string name="basic_Information">Basic Information</string>
    <string name="a_Basic_Information">I.Basic Information</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="tel">Telephone</string>
    <string name="home_Address">Home Address</string>
    <string name="marriage">Marriage</string>
    <string name="unmarried">Unmarried</string>
    <string name="married">"Married"</string>
    <string name="remarriage">Remarriage</string>
    <string name="widowed">Widowed</string>
    <string name="divorce">Divorce</string>
    <string name="pre_Retirement_Occupation">Pre Retirement Occupation</string>
    <string name="cadre">Cadre</string>
    <string name="worker">Worker</string>
    <string name="farmer">Farmer</string>
    <string name="cultural_Worker">Cultural Worker</string>
    <string name="other_">Other:</string>
    <string name="children_Situation">Children Situation</string>
    <string name="childless">Childless</string>
    <string name="have_Son">Have Son</string>
    <string name="have_Daughter">Have Daughter</string>
    <string name="adopt">Adopt</string>
    <string name="barren">Barren</string>
    <string name="caregivers">Caregivers</string>
    <string name="spouse">Spouse</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="alone">alone</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="grandchildren">Grandchildren</string>
    <string name="parent">Parent</string>
    <string name="nursing_Status">Nursing Status</string>
    <string name="family_Economic_Situation">Family Economic Situation</string>
    <string name="family_Living_Conditions">Family Living Conditions</string>
    <string name="lighting">Lighting</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="dry_Humidity">Dry Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="smell">Smell</string>
    <string name="room_Environment">Room Environment</string>
    <string name="tOILET">TOILET</string>
    <string name="handrails">Handrails</string>
    <string name="no_Armrests">No Armrests</string>
    <string name="narrow">Narrow</string>
    <string name="floor_is_not_slippery">Floor is not slippery</string>
    <string name="there_is_a_step_at_the_door">There is a step at the door</string>
    <string name="toilet">Toilet</string>
    <string name="use_Toilet">Use Toilet</string>
    <string name="bed_Unit">Bed Unit</string>
    <string name="altitude_Discomfort">Altitude Discomfort</string>
    <string name="width_Discomfort">Width Discomfort</string>
    <string name="non_Supine_Position">Non Supine Position</string>
    <string name="bed_Stall">Bed Stall</string>
    <string name="medical_Bed">Medical Bed</string>
    <string name="air_Cushion_Bed">Air Cushion Bed</string>
    <string name="neatness_">Neatness：</string>
    <string name="neat">Neat</string>
    <string name="foreign_Body">Foreign Body</string>
    <string name="soiled_Bedclothes">Soiled Bedclothes</string>
    <string name="mattress_Softness_">Mattress Softness:</string>
    <string name="soft">Soft</string>
    <string name="hard">Hard</string>
    <string name="mattress_">Mattress:</string>
    <string name="environment">Environment</string>
    <string name="does_the_furniture_have_an_acute_angle">Does the furniture have an acute angle(</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_it_firm">Is it firm(</string>
    <string name="does_it_affect_indoor_activities">Does it affect indoor activities(</string>
    <string name="is_it_skid_resistant">Floor: is it skid resistant(</string>
    <string name="is_there_an_obstacle_free">Is there an obstacle free(</string>
    <string name="is_it_tidy">Is it tidy(</string>
    <string name="sundries_piled_up">Aisle: sundries piled up(</string>
    <string name="a_threshold">A threshold(</string>
    <string name="other">Other</string>
    <string name="dressing">Dressing</string>
    <string name="clean">Clean(</string>
    <string name="fit">Fit(</string>
    <string name="keep_warm">Keep warm(</string>
    <string name="get_up_in_the_night">Get up in the night</string>
    <string name="the_light_is_not_enough">The light is not enough</string>
    <string name="toilet_is_not_appropriate">Toilet is not appropriate</string>
    <string name="auxiliary_tools">Auxiliary tools</string>
    <string name="call_invalid">Call invalid</string>
    <string name="call_security">Call security</string>
    <string name="flashlight">Flashlight</string>
    <string name="get_up_alone_at_night">Get up alone at night</string>
    <string name="remarks">Remarks</string>
    <string name="aids_for_class">Aids for class</string>
    <string name="support_type">1. Support type:</string>
    <string name="walking_aid">Walking aid</string>
    <string name="four_point_battle">Four point battle</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="electric_wheelchair">Electric wheelchair</string>
    <string name="orthopaedic_class">2.Orthopaedic class:</string>
    <string name="ankle_foot_orthoses">Ankle foot orthoses</string>
    <string name="spinal_orthosis">Spinal orthosis</string>
    <string name="other_categories">3.Other categories:</string>
    <string name="suit">Suit</string>
    <string name="unsuited">Unsuited</string>
    <string name="other_tools">Other tools</string>
    <string name="auxiliary_requirements">Auxiliary requirements</string>
    <string name="history_records">History records</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="drug_use">Drug use</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="five_day_working_days">5 day working days</string>
    <string name="two_days_weekend">2 days weekend</string>
    <string name="mental_status_examination_MMSE_evaluation">Mental status examination (MMSE) evaluation</string>
    <string name="the_serial_number">The serial number</string>
    <string name="subject">Subject</string>
    <string name="instructions">Instructions</string>
    <string name="should_the_score">Should the score</string>
    <string name="evaluation_score">Evaluation score</string>
    <string name="time_orientation_time_now">Time orientation (time now)</string>
    <string name="day_year_month_question">What day is today? Which day? Which month? In which year? What season?</string>
    <string name="location_orientation">Location orientation (Present address)</string>
    <string name="now_street_floor_city">Where are we now? What street? What floor is it? Which city, please? What country?</string>
    <string name="memory_scored_by_the_first_answer">Memory (scored by the first answer)</string>
    <string name="i_will_tell_you_three_things">I will tell you three things.You listen to me:the ball,the flag,the trees,please repeat it.OK,please remember,I will ask you later,please say it again.</string>
    <string name="attention_and_calculation">Attention and calculation</string>
    <string name="could_you_please_figure_out_how_much">Could you please figure out how much 100\-7 is? Go down with minus 7, until I stop now. (5 times)</string>
    <string name="memory_at_least_1_minutes_apart_from_memory">Memory (at least 1 minutes apart from memory)</string>
    <string name="would_you_please_recall_what_I_have_just_kept_you_in_mind">Would you please recall what I have just kept you in mind for 3 things?</string>
    <string name="the_name">The name</string>
    <string name="show_your_watch_show_pen">(show your watch) what\'s this? (show pen) what\'s this?</string>
    <string name="repeat_the_sentence">Repeat the sentence</string>
    <string name="now_I_will_say_a_word_please_repeat_it_clearly_to_me">Now I will say a word, please repeat it clearly to me. Forty-four lions</string>
    <string name="execute_commands_dont_repeat_dont_demonstrate">Execute commands (don\'t repeat, don\'t demonstrate)</string>
    <string name="please_select_a_client">Please select a client</string>
    <string name="query">Query</string>
    <string name="refresh">Refresh</string>
    <string name="serial_number">Serial number</string>
    <string name="customer_name">Customer name</string>
    <string name="service_time">Service time</string>
    <string name="loading">Loading\.\.\.</string>
    <string name="home_page">Home page</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="last_page">Last page</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User name</string>
    <string name="button">Button</string>
    <string name="personal_information">Personal information</string>
    <string name="name_used_before">Name used before</string>
    <string name="iD_number">ID number</string>
    <string name="marital_status">Marital status</string>
    <string name="return1">Return</string>
    <string name="server_list">Server list</string>
    <string name="equipment_binding">Equipment binding</string>
    <string name="about">About</string>
    <string name="str_PersonalSupplement0">1.Basic information</string>
    <string name="str_PersonalSupplement1">2.Family residence</string>
    <string name="str_PersonalSupplement2">3.The bedroom </string>
    <string name="str_PersonalSupplement3">4.diet</string>
    <string name="str_PersonalSupplement4">5.sleep</string>
    <string name="str_PersonalSupplement5">6.defecation</string>
    <string name="str_PersonalSupplement6">7.urination</string>
    <string name="str_PersonalSupplement7">8.psychological</string>
    <string name="str_PersonalSupplement8">9.Personal hygiene</string>
    <string name="str_PersonalSupplement9">10.Vital signs</string>
    <string name="str_PersonalSupplement10">11.face</string>
    <string name="str_PersonalSupplement11">12.The skin</string>
    <string name="str_PersonalSupplement12">13.Chest (chest)</string>
    <string name="str_PersonalSupplement13">14.The abdomen</string>
    <string name="str_PersonalSupplement">（1）Personal information</string>
</resources>