<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/title" />

    <TextView
        android:id="@+id/tv_second_title"
        style="@style/SecondTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_PersonalSupplement" />

    <ScrollView
        android:id="@+id/layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            style="@style/FirstLinearLayout">

            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title0"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement0" />
            <include android:id="@+id/activity_sf_personal_supplement_part0"
                layout="@layout/activity_sf_personal_supplement_part0"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title1"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement1" />
            <include android:id="@+id/activity_sf_personal_supplement_part1"
                layout="@layout/activity_sf_personal_supplement_part1"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title2"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement2" />
            <include android:id="@+id/activity_sf_personal_supplement_part2"
                layout="@layout/activity_sf_personal_supplement_part2"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title3"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement3" />
            <include android:id="@+id/activity_sf_personal_supplement_part3"
                layout="@layout/activity_sf_personal_supplement_part3"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title4"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement4" />
            <include android:id="@+id/activity_sf_personal_supplement_part4"
                layout="@layout/activity_sf_personal_supplement_part4"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title5"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement5" />
            <include android:id="@+id/activity_sf_personal_supplement_part5"
                layout="@layout/activity_sf_personal_supplement_part5"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title6"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement6" />
            <include android:id="@+id/activity_sf_personal_supplement_part6"
                layout="@layout/activity_sf_personal_supplement_part6"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title7"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement7" />
            <include android:id="@+id/activity_sf_personal_supplement_part7"
                layout="@layout/activity_sf_personal_supplement_part7"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title8"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement8" />
            <include android:id="@+id/activity_sf_personal_supplement_part8"
                layout="@layout/activity_sf_personal_supplement_part8"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title9"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement9" />
            <include android:id="@+id/activity_sf_personal_supplement_part9"
                layout="@layout/activity_sf_personal_supplement_part9"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title10"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement10" />
            <include android:id="@+id/activity_sf_personal_supplement_part10"
                layout="@layout/activity_sf_personal_supplement_part10"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title11"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement11" />
            <include android:id="@+id/activity_sf_personal_supplement_part11"
                layout="@layout/activity_sf_personal_supplement_part11"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title12"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement12" />
            <include android:id="@+id/activity_sf_personal_supplement_part12"
                layout="@layout/activity_sf_personal_supplement_part12"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title13"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement13" />
            <include android:id="@+id/activity_sf_personal_supplement_part13"
                layout="@layout/activity_sf_personal_supplement_part13"/>
           <!--  <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title14"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement14" />
            <include android:id="@+id/activity_sf_personal_supplement_part14"
                layout="@layout/activity_sf_personal_supplement_part14"/>
            <include layout="@layout/divide_gray" />
			<TextView
                android:id="@+id/tv_third_title15"
                style="@style/ThirdTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_PersonalSupplement15" />
            <include android:id="@+id/activity_sf_personal_supplement_part15"
                layout="@layout/activity_sf_personal_supplement_part15"/> -->


            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                layout="@layout/bottom" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>