<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
<include
        android:id="@+id/title"
        layout="@layout/title" />
    <TextView
        android:id="@+id/text1"
        style="@style/SecondTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:text="@string/personal_information" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:orientation="horizontal" >

        <TextView
            style="@style/NomalTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_xm"
            style="@style/NomalEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:orientation="horizontal" >

        <TextView
            style="@style/NomalTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_used_before" />

        <EditText
             android:id="@+id/et_cym"
            style="@style/NomalEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:orientation="horizontal" >

        <TextView
            style="@style/NomalTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iD_number" />

        <EditText
             android:id="@+id/et_sfzh"
            style="@style/NomalEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number" />
    </LinearLayout>

 
     <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout3"
        android:orientation="horizontal" >
     <TextView 
        android:id="@+id/ch_hyzk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         style="@style/NomalTextViewTitle"
        android:text="@string/marital_status"
        android:visibility="gone"
        /> 
    </LinearLayout>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_cancel_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return1" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>