<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/main_menu_background"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="bottom" android:paddingLeft="16dp" android:paddingTop="14dp"
        android:paddingRight="16dp" android:paddingBottom="23dp">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/server_list"
                android:id="@+id/menu_server" android:gravity="center" android:textSize="18dp"
                android:background="#ffffffff"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/equipment_binding"
                android:id="@+id/menu_device" android:gravity="center" android:textSize="18dp" android:autoText="false"
                android:background="#ffffffff" android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/about"
                android:id="@+id/menu_about" android:gravity="center" android:textSize="18dp"
                android:background="#ffffffff" android:layout_marginTop="5dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/cancel"
                android:id="@+id/menu_back" android:gravity="center" android:textSize="18dp"
                android:background="#ffffffff" android:layout_marginTop="16dp"/>
    </LinearLayout>

</RelativeLayout>